# onchain

./: .dockerignore  .gitignore  LICENSE  README.md  Untitled.ipynb  docker-compose.goerli.yaml  docker-compose.yaml  dune.ipynb  k3d-main.kubeconfig.yaml  main.py  minio_secrets.json  pyproject.toml  requirements.txt  tests.py
conf/: main.yaml  produce.yaml
conf/mapper/: evm.yaml
conf/method/: ethereum.yaml  polygon.yaml
conf/node_credentials/: .gitignore
conf/service/: ethereum.yaml  polygon.yaml  warehouse.yaml
conf/sink/: bigquery.yaml  pulsar.yaml
conf/source/: ethereum.yaml  polygon.yaml  pulsar.yaml
conf/worker/: ray.yaml
config/: .gitignore  main.yaml
config/blockchain/: ethereum.yaml  polygon.yaml
config/sink/: bigquery.yaml  pulsar.yaml
config/source/: bigquery.yaml  pulsar.yaml
datadir/goerli/consensus/: node-sync-config.toml
datadir/goerli/execution/: config.toml
datadir/mainnet/: .gitignore
datadir/mainnet/consensus/: config.toml  node-sync-config.toml
datadir/sepolia/: .gitignore
datadir/sepolia/consensus/: config.toml  config.yaml
dbt/: .user.yml  dbt_project.yml  packages.yml  profiles.yml
dbt/models/: sources.yml
dbt/models/polygon/: vw_get_recent_missing_block_numbers.sql
infra/: .dockerignore  Dockerfile  Dockerfile.podman  Dockerfile.worker  clickhouse.yaml  clickhouse_zookeeper.yaml  minio.volume.yaml  registries.yaml
infra/charts/: minio.values.yaml  nats.values.yaml  starrocks.values.yaml
infra/node/ethereum/goerli/consensus/: config.toml
infra/node/ethereum/mainnet/execution/: config.toml
infra/node/ethereum/sepolia/consensus/: node-sync-config.toml
node/ethereum/goerli/execution/: config.toml
notebooks/: .gitignore  bq.ipynb  dune-etl.ipynb  dune.ipynb  onchain_etl_test.ipynb  web3.ipynb
onchain/: .gitignore  __init__.py  __main__.py  constants.py  logger.py
onchain/core/: base.py  builder.py  dbt.py  schema.py
onchain/core/mappers/: evm.py  proto.py
onchain/core/methods/: evm.py
onchain/core/sinks/: apache_pulsar.py  base.py  bigquery.py  pulsar.py
onchain/core/sources/: apache_pulsar.py  api.py  base.py  bigquery.py  pulsar.py
onchain/core/workers/: base.py  ray.py  ray_streamer.py
onchain/models/: mode.py
onchain/models/blockchains/: bsc.proto  bsc_pb2.py  ethereum_pb2.py  evm.proto  evm.py  evm_pb2.py  polygon_pb2.py
onchain/models/schema/: evm.py
onchain/queries/: bigquery.py
onchain/services/: bigquery__pulsar.py  pulsar__bigquery.py  pulsar__pulsar.py
onchain/services/evm/: api__pulsar.py  api_pulsar__blocks.py  api_pulsar__transactions.py  bigquery__pulsar.py  functions.py  pulsar__bigquery.py  pulsar__pulsar.py
onchain/services/warehouse/: pulsar__bigquery__writer.py  pulsar_bigquery__writer.py
onchain/src/models/: ethereum.proto  polygon.proto
onchain/tests/: test.py
onchain/utils/: helpers.py  protobuf.py  pulsar.py
onchain/validators/: __init__.py  blockchain.py  config.py
scripts/: build.sh  entrypoint.sh  useful_commands.sh
