[tool.poetry]
name = "onchain"
version = "0.1.0"
description = ""
authors = ["koksang <koksanggl@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "==3.10.4"                                # matching ray-cluster deployment python version
jupyterlab = "^3.5.1"
httpx = "^0.23.1"
pydantic = "^1.10.2"
pandas = "^1.5.2"
numpy = "^1.23.5"
google-cloud-bigquery = "3.3.3"
google-cloud-bigquery-storage = "2.16.0"
loguru = "^0.6.0"
tqdm = "^4.64.1"
hydra-core = "^1.3.0"
pathlib = "^1.0.1"
pytest = "^7.2.0"
db-dtypes = "^1.0.5"
web3 = "5.31.0"
protobuf = "3.19.4"
ray = { extras = ["default"], version = "^2.2.0" }
pulsar-client = "^2.10.2"
google-api-python-client = "^2.70.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
